finally. correct gaps paddings and margins

--- a/src/index.css
+++ b/src/index.css
@@ -296,17 +296,6 @@ body {
   opacity: 0.4;
 }
 
-.react-flow__minimap {
-  border-radius: 6px;
-  border: 1px solid var(--border);
-  background: var(--card);
-  box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1);
-}
-
-.react-flow__minimap.bottom.right {
-  bottom: calc(16px + 32px + 16px) !important;
-}
-
 .react-flow__handle {
   z-index: 10;
 }
